acrescentando middlewares, rotas e linkando com o front

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASS=root
-DB_NAME=Coleira-Inteligente
+DB_NAME=coleiraInteligente
 PORT=3000
+
+# Configurações de Segurança
+JWT_SECRET=tuamaethe4_menosadopaulo
+
+# Configurações do CORS
+CORS_ORIGIN=http://localhost:8081
